sample/service-f5-web-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: f5-hello-world-service-nodeport
  namespace: default
spec:
  type: NodePort
  ports:
  - name: f5-hello-world-web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: f5-hello-world-web
