sample/service-lb-f5-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: f5-hello-world-service-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: f5-hello-world-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
