sample/ingress-alb-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress-no-third-host
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - host: alb-ingress-nginx.yshin.work
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service-nodeport
            port:
              number: 80
  - host: alb-ingress-f5.yshin.work
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: f5-hello-world-service-nodeport
            port:
              number: 8080
