sample/ingress-alb-target-type-ip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress-type-ip
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
spec:
  rules:
  - host: alb-ingress-nginx.yshin.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-nodeport
            port:
              number: 80
  - host: alb-ingress-f5.yshin.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: f5-hello-world-service-clusterip
            port:
              number: 8080
